--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             
             <div id="practice-content" class="dar-content">
                 Представляйте самую тонкую и прямую линию, для того, чтобы это было легче сделать - нарисуйте на листе 2 произвольные точки и множество раз проводите между ними линию, предствляя, что это ваш позвоночник<br>
-                <a href="https://github.com/miplix/glavnaya_dar" class="practice-link">медитация</a>
+                <a href="https://miplix.github.io/glavnaya_dar/" class="practice-link">медитация</a>
                 <a class="hide-link" onclick="hideContent('practice')">скрыть</a>
             </div>
     
